--- a/info/task_description.html
+++ b/info/task_description.html
@@ -1,20 +1,24 @@
 <!-- Describe task in general -->
 
 <p>
-    Sum two passed ints
+    We have an Array of booleans. Let's check if majority of elements are true.
 </p>
 
 <p style="text-align: center;">
-    <img  title="example" src="{{MEDIA}}example.png" alt="example" style="max-height: 83px"/>
+    <img  title="example" src="{{MEDIA}}example.png" alt="example" style="max-height: 200px"/>
+</p>
+
+<p>
+    Some cases worth to mention. Empty list should return false. In case where trues and false have equial amount, function should return false.
 </p>
 
 <!-- Explain input and output values -->
 <p>
-    <strong>Input: </strong> Two arguments. Both are ints.
+    <strong>Input: </strong> {% if interpreter.slug == "js-node" %}Array{% else %}Iterable{% endif %} of booleans.
 </p>
 
 <p>
-    <strong>Output: </strong> Int. 
+    <strong>Output: </strong> Boolean
 </p>
 
 
@@ -25,28 +29,14 @@
     </p>
 
 {% if interpreter.slug == "js-node" %}
-<pre class="brush: javascript">sumTwo(2, 3) == 5
-sumTwo(5, 7) == 12
+<pre class="brush: javascript">isMajority([true, true, false, true, false]) == true
+isMajority([true, true, false]) == true
 </pre>
 {% else %}
-<pre class="brush: python">sum_two(2, 3) == 5
-sum_two(5, 7) == 12
+<pre class="brush: python">is_majority([True, True, False, True, False]) == True
+is_majority([True, True, False]) == True
 </pre>
 {% endif %}
 </div>
 
 
-<!-- Here you can explain how it can be used in development -->
-<!-- The section is optional -->
-<p class="for_info_only">
-
-    <strong>How it’s used: </strong>
-    <i>(math is used everywhere)</i>
-</p>
-
-<!-- Here you can explain some constraints for input-->
-<!-- The section is optional -->
-<p>
-    <strong>Precondition:</strong>
-    <i>both given ints should be between -1000 and 1000</i>
-</p>
