--- a/info/task_description.html
+++ b/info/task_description.html
@@ -1,7 +1,7 @@
 <!-- Describe task in general -->
 
 <p>
-    We have an Array of booleans. Let's check if majority of elements are true.
+    We have an Array of booleans. Let's check if the majority of elements are true.
 </p>
 
 <p style="text-align: center;">
@@ -9,16 +9,16 @@
 </p>
 
 <p>
-    Some cases worth to mention. Empty list should return false. In case where trues and false have equial amount, function should return false.
+    Some cases worth mentioning: 1) an empty list should return false; 2) if trues and false have an equial amount, function should return false.
 </p>
 
 <!-- Explain input and output values -->
 <p>
-    <strong>Input: </strong> {% if interpreter.slug == "js-node" %}Array{% else %}Iterable{% endif %} of booleans.
+    <strong>Input: </strong> An {% if interpreter.slug == "js-node" %}Array{% else %}Iterable{% endif %} of booleans.
 </p>
 
 <p>
-    <strong>Output: </strong> Boolean
+    <strong>Output: </strong> A Boolean. 
 </p>
 
 
