--- a/info/task_description.html
+++ b/info/task_description.html
@@ -1,7 +1,7 @@
 <!-- Describe task in general -->
 
 <p>
-    We have an Array of booleans. Let's check if the majority of elements are true.
+    We have an {% if interpreter.slug == "js-node" %}Array{% else %}List{% endif %} of booleans. Let's check if the majority of elements are true.
 </p>
 
 <p style="text-align: center;">
@@ -14,7 +14,7 @@
 
 <!-- Explain input and output values -->
 <p>
-    <strong>Input: </strong> An {% if interpreter.slug == "js-node" %}Array{% else %}Iterable{% endif %} of booleans.
+    <strong>Input: </strong> An {% if interpreter.slug == "js-node" %}Array{% else %}List{% endif %} of booleans.
 </p>
 
 <p>
