--- a/info/task_description.html
+++ b/info/task_description.html
@@ -9,7 +9,7 @@
 </p>
 
 <p>
-    Some cases worth mentioning: 1) an empty list should return false; 2) if trues and false have an equial amount, function should return false.
+    Some cases worth mentioning: 1) an empty list should return false; 2) if trues and false have an equal amount, function should return false.
 </p>
 
 <!-- Explain input and output values -->
