--- a/info/task_description.html
+++ b/info/task_description.html
@@ -1,7 +1,7 @@
 <!-- Describe task in general -->
 
 <p>
-    We have an {% if interpreter.slug == "js-node" %}Array{% else %}List{% endif %} of booleans. Let's check if the majority of elements are true.
+    We have a {% if interpreter.slug == "js-node" %}Array{% else %}List{% endif %} of booleans. Let's check if the majority of elements are true.
 </p>
 
 <p style="text-align: center;">
@@ -9,12 +9,12 @@
 </p>
 
 <p>
-    Some cases worth mentioning: 1) an empty list should return false; 2) if trues and false have an equal amount, function should return false.
+    Some cases worth mentioning: 1) an empty list should return false; 2) if trues and falses have an equal amount, function should return false.
 </p>
 
 <!-- Explain input and output values -->
 <p>
-    <strong>Input: </strong> An {% if interpreter.slug == "js-node" %}Array{% else %}List{% endif %} of booleans.
+    <strong>Input: </strong> A {% if interpreter.slug == "js-node" %}Array{% else %}List{% endif %} of booleans.
 </p>
 
 <p>
