--- a/hints/freeman_lex.html
+++ b/hints/freeman_lex.html
@@ -24,7 +24,7 @@ return items.count(True) ...
         Help me to check if counted amount is the majority of the list elements?
     </div>
     <div class="answer">
-        <p>Majority means more than a half. Use build-in <a target="_blank" href="https://www.w3schools.com/python/ref_func_len.asp">len()</a>
+        <p>Majority means more than a half. Use built-in <a target="_blank" href="https://www.w3schools.com/python/ref_func_len.asp">len()</a>
         function on <b class="code">items</b> and find a half from the result (divide into 2).
         It should be strictly less then the amount of <b class="code">True</b>-s.</p>
         <pre class="brush: python">
