--- a/hints/freeman_lex.html
+++ b/hints/freeman_lex.html
@@ -54,11 +54,13 @@ return items.count(True) > len(items) / 2
         <p>
             Here is everything together:
         </p>
+        <div class="spoiler">
         <pre class="brush: python">
 def is_majority(items: list[bool]) -> bool:
     
     return items.count(True) > len(items) / 2
         </pre>
+        </div>
     </div>
 </div>
 <div class="question-answer">
@@ -76,11 +78,13 @@ def is_majority(items: list[bool]) -> bool:
             find sum of the elements of <b class="code">items</b> and it should
             be strictly bigger then half of the length. 
         </p>
+        <div class="spoiler">
         <pre class="brush: python">
 def is_majority(items: list[bool]) -> bool:
     
     return sum(items) > len(items) / 2
         </pre>
+        </div>
         <p>
             <b>
                 This is a simple mission, but click "Best solutions" at mission menu and see some other interesting solutions!
