--- a/translations/uk/hints/freeman_lex.html
+++ b/translations/uk/hints/freeman_lex.html
@@ -54,11 +54,13 @@ return items.count(True) > len(items) / 2
         <p>
             Ось все разом:
         </p>
+        <div class="spoiler">
         <pre class="brush: python">
 def is_majority(items: list[bool]) -> bool:
     
     return items.count(True) > len(items) / 2
         </pre>
+        </div>
     </div>
 </div>
 <div class="question-answer">
@@ -76,11 +78,13 @@ def is_majority(items: list[bool]) -> bool:
             знайти суму елементів <b class="code">items</b> і вона повинна бути
             строго більшою ніж половина довжини. 
         </p>
+        <div class="spoiler">
         <pre class="brush: python">
 def is_majority(items: list[bool]) -> bool:
     
     return sum(items) > len(items) / 2
         </pre>
+        </div>
         <p>
             <b>
                 Це проста місія, але тисни "Best solutions" в меню місії і побачиш деякі інші цікаві розв'язки!
