--- a/info/task_description.html
+++ b/info/task_description.html
@@ -1,8 +1,7 @@
 <!-- Describe task in general -->
 
 <p>
-    We have {% if is_js %}an Array{% else %}a list{% endif %} of {% if is_js %}<span translate="repeat">boolean</span>{% else %}<span translate="repeat">bool</span>{% endif %}.
-    Let's check if the majority of elements are {% if is_js %}<b class="code">true</b>{% else %}<b class="code">True</b>{% endif %}.
+    We have {% if is_js %}an <span translate="repeat">array</span>{% else %}a <span translate="repeat">list</span>{% endif %} of {% if is_js %}<span translate="repeat">boolean</span>{% else %}<span translate="repeat">bool</span>{% endif %}. Let's check if the majority of elements are {% if is_js %}<b class="code">true</b>{% else %}<b class="code">True</b>{% endif %}.
 </p>
 
 <p style="text-align: center;">
@@ -10,15 +9,13 @@
 </p>
 
 <p>
-    Some cases worth mentioning: 1) an empty {% if is_js %}Array{% else %}list{% endif %} should return
-    {% if is_js %}<b class="code">false</b>{% else %}<b class="code">False</b>{% endif %};
-    2) if {% if is_js %}<b class="code">true</b>-s and <b class="code">false</b>-s{% else %}<b class="code">True</b>-s and <b class="code">False</b>-s{% endif %}
-    have an equal amount, function should return {% if is_js %}<b class="code">false</b>{% else %}<b class="code">False</b>{% endif %}.
+    Some cases worth mentioning: 1) an empty {% if is_js %}<span translate="repeat">array</span>{% else %}<span translate="repeat">list</span>{% endif %} should return {% if is_js %}<b class="code">false</b>{% else %}<b class="code">False</b>{% endif %};
+    2) if {% if is_js %}<b class="code">true</b>-s and <b class="code">false</b>-s{% else %}<b class="code">True</b>-s and <b class="code">False</b>-s{% endif %} have an equal amount, function should return {% if is_js %}<b class="code">false</b>{% else %}<b class="code">False</b>{% endif %}.
 </p>
 
 <!-- Explain input and output values -->
 <p>
-    <strong>Input:</strong> {% if is_js %}An Array{% else %}A list{% endif %} of {% if is_js %}<span translate="repeat">boolean</span>{% else %}bool{% endif %}.
+    <strong>Input:</strong> {% if is_js %}An <span translate="repeat">array</span>{% else %}A <span translate="repeat">list</span>{% endif %} of {% if is_js %}<span translate="repeat">boolean</span>{% else %}bool{% endif %}.
 </p>
 
 <p>
