--- a/translations/fr/info/task_description.html
+++ b/translations/fr/info/task_description.html
@@ -1,7 +1,7 @@
 <!-- Describe task in general -->
 
 <p>
-    Nous avons {% if is_js %}un <span>tableau</span> <span>(array)</span>{% else %} une <span>liste</span> <span>(list)</span>{% endif %} de {% if is_js %}<span>booléen</span> <span>(boolean)</span>{% else %} bool{% endif %}. Vérifions si la majorité des éléments sont {% if is_js %}<b class="code">true</b> {% else %} <b class="code">True</b> {% endif %}.
+    Nous avons {% if is_js %}un <span>tableau</span> <span>(array)</span>{% else %}une <span>liste</span> <span>(list)</span>{% endif %} de {% if is_js %}<span>booléen</span> <span>(boolean)</span>{% else %}<span>booléen</span> <span>(bool){% endif %}. Vérifions si la majorité des éléments sont {% if is_js %}<b class="code">true</b>{% else %}<b class="code">True</b>{% endif %}.
 </p>
 
 <p style="text-align: center;">
@@ -9,17 +9,17 @@
 </p>
 
 <p>
-    Quelques cas méritent d'être mentionnés: 1) un<span>tableau</span> {% if is_js %}<span></span> vide <span>(array)</span>{% else %}<span>list</span>{% endif %} devrait renvoyer {% if is_js %}<b class="code">false</b> {% else %} <b class="code">False</b> {% endif %};
-    2) si {% if is_js %}<b class="code">true</b> -s et <b class="code">false</b>-s{% else %}<b class="code">True</b> -s et <b class="code">False</b>-s{% endif %} ont une quantité égale, la fonction doit renvoyer {% if is_js %}<b class="code">false</b> {% else %} <b class="code">False</b> {% endif %}.
+    Quelques cas méritent d'être mentionnés: 1) un {% if is_js %}<span>tableau</span> vide <span>(array)</span>{% else %}<span>liste</span> <span>(list)</span>{% endif %} devrait renvoyer {% if is_js %}<b class="code">false</b>{% else %}<b class="code">False</b>{% endif %};
+    2) si {% if is_js %}<b class="code">true</b> -s et <b class="code">false</b>-s{% else %}<b class="code">True</b> -s et <b class="code">False</b>-s{% endif %} ont une quantité égale, la fonction doit renvoyer {% if is_js %}<b class="code">false</b>{% else %}<b class="code">False</b>{% endif %}.
 </p>
 
 <!-- Explain input and output values -->
 <p>
-   <strong>Entrée:</strong> {% if is_js %}Un <span>tableau</span> <span>(array)</span>{% else %} Une <span>liste</span> <span>(list)</span>{% endif %} de {% if is_js %}<span>booléen</span> <span>(boolean)</span>{% else %} bool{% endif %}.
+   <strong>Entrée:</strong> {% if is_js %}Un <span>tableau</span> <span>(array)</span>{% else %}Une <span>liste</span> <span>(list)</span>{% endif %} de {% if is_js %}<span>booléen</span> <span>(boolean)</span>{% else %}<span>booléen</span> <span>(bool)</span>{% endif %}.
 </p>
 
 <p>
-   <strong>Sortie:</strong> Un tableau {% if is_js %}<span>booléen</span> <span>(boolean)</span>{% else %} bool{% endif %}. 
+   <strong>Sortie:</strong> Un tableau {% if is_js %}<span>booléen</span> <span>(boolean)</span>{% else %}<span>booléen</span> <span>(bool)</span>{% endif %}. 
 </p>
 
 
