--- a/translations/fr/info/task_description.html
+++ b/translations/fr/info/task_description.html
@@ -19,7 +19,7 @@
 </p>
 
 <p>
-   <strong>Sortie:</strong> Un tableau {% if is_js %}<span>booléen</span> <span>(boolean)</span>{% else %}<span>booléen</span> <span>(bool)</span>{% endif %}. 
+   <strong>Sortie:</strong> {% if is_js %}<span>Booléen</span> <span>(boolean)</span>{% else %}<span>Booléen</span> <span>(bool)</span>{% endif %}. 
 </p>
 
 
