--- a/translations/fr/hints/freeman_lex.html
+++ b/translations/fr/hints/freeman_lex.html
@@ -87,7 +87,7 @@ def is_majority(items: list[bool]) -> bool:
         </div>
         <p>
             <b>
-                This is a simple mission, but click "Best solutions" at mission menu and see some other interesting solutions!
+                Cliquez sur "Best solutions" dans le menu de la mission et découvrez de nombreuses autres solutions intéressantes!
             </b>
         </p>
     </div>
