--- a/hints/freeman_lex.html
+++ b/hints/freeman_lex.html
@@ -85,11 +85,7 @@ def is_majority(items: list[bool]) -> bool:
     return sum(items) > len(items) / 2
         </pre>
         </div>
-        <p>
-            <b>
-                This is a simple mission, but click "Best solutions" at mission menu and see some other interesting solutions!
-            </b>
-        </p>
+        <p>This is a simple mission, but click <b>Best Solutions</b> at mission menu and see some other interesting solutions!</p>
     </div>
 </div>
 <div class="question-answer">
