--- a/info/task_description.html
+++ b/info/task_description.html
@@ -1,7 +1,7 @@
 <!-- Describe task in general -->
 
 <p>
-    We have {% if is_js %}an <span translate="repeat">array</span>{% else %}a <span translate="repeat">list</span>{% endif %} of {% if is_js %}<span translate="repeat">boolean</span>{% else %}<span translate="repeat">bool</span>{% endif %}. Let's check if the majority of elements are {% if is_js %}<b class="code">true</b>{% else %}<b class="code">True</b>{% endif %}.
+    We have {% if is_js %}an <span translate="repeat">array</span>{% else %}a <span translate="repeat">list</span>{% endif %} of logic values <span translate="no">(bool{% if is_js %}ean{% endif %})</span>. Let's check if the majority of elements are <b class="code">{% if is_js %}t{% else %}T{% endif %}rue</b>.
 </p>
 
 <p style="text-align: center;">
@@ -9,17 +9,17 @@
 </p>
 
 <p>
-    Some cases worth mentioning: 1) an empty {% if is_js %}<span translate="repeat">array</span>{% else %}<span translate="repeat">list</span>{% endif %} should return {% if is_js %}<b class="code">false</b>{% else %}<b class="code">False</b>{% endif %};
-    2) if {% if is_js %}<b class="code">true</b>-s and <b class="code">false</b>-s{% else %}<b class="code">True</b>-s and <b class="code">False</b>-s{% endif %} have an equal amount, function should return {% if is_js %}<b class="code">false</b>{% else %}<b class="code">False</b>{% endif %}.
+    Some cases worth mentioning: 1) an empty {% if is_js %}<span translate="repeat">array</span>{% else %}<span translate="repeat">list</span>{% endif %} should return <b class="code">{% if is_js %}f{% else %}F{% endif %}alse</b>;
+    2) if <b class="code">{% if is_js %}t{% else %}T{% endif %}rue</b>-s and <b class="code">{% if is_js %}f{% else %}F{% endif %}alse</b>-s have an equal amount, function should return <b class="code">{% if is_js %}f{% else %}F{% endif %}alse</b>.
 </p>
 
 <!-- Explain input and output values -->
 <p>
-    <strong>Input:</strong> {% if is_js %}An <span translate="repeat">array</span>{% else %}A <span translate="repeat">list</span>{% endif %} of {% if is_js %}<span translate="repeat">boolean</span>{% else %}bool{% endif %}.
+    <strong>Input:</strong> {% if is_js %}An <span translate="repeat">array</span>{% else %}A <span translate="repeat">list</span>{% endif %} of logic values <span translate="no">(bool{% if is_js %}ean{% endif %})</span>.
 </p>
 
 <p>
-    <strong>Output:</strong> A {% if is_js %}<span translate="repeat">boolean</span>{% else %}<span translate="repeat">bool</span>{% endif %}. 
+    <strong>Output:</strong> A logic value <span translate="no">(bool{% if is_js %}ean{% endif %})</span>. 
 </p>
 
 
