--- a/translations/zh-hans/info/task_description.html
+++ b/translations/zh-hans/info/task_description.html
@@ -5,7 +5,7 @@
 </p>
 
 <p style="text-align: center;">
-    <img  title="example" src="{{MEDIA}}example.png" alt="example" style="max-height: 200px"/>
+    <img src="{{MEDIA_CONVERT}}title.png" class="title_img" />
 </p>
 
 <p>
